--- a/MVCVeterinaria/Views/Home/Privacy.cshtml
+++ b/MVCVeterinaria/Views/Home/Privacy.cshtml
@@ -1,6 +1,24 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Politica de Privacidad";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p> <b>Veterinaria El Rey Can</b> informa seguidamente de su política de privacidad aplicada a los datos personales. De esta manera, todos los datos personales que tenga bajo su responsabilidad serán tratados de acuerdo con la Ley 15/1999, 
+    13 de diciembre, de Protección de Datos de Carácter Personal y se guardarán las debidas medidas de seguridad y confidencialidad de los mismos.</p>
+<p>
+    La visita este sitio no implica que el usuario deba suministrar ninguna información alguna respecto a su identidad,
+    siendo totalmente anónima y, en ningún caso, puede ser asociada a un usuario concreto e identificado. En el supuesto que se suministre datos de carácter de personal,
+    estos datos serán recogidos y utilizados conforme a las limitaciones y los derechos recogidos en la citada norma de protección de datos.
+</p>
+<p>Los usuarios que faciliten datos de carácter personal consienten de forma clara, exacta e inequívoca las presentes condiciones.</p>
+<h3>1. Recogida de datos</h3>
+<p>La recogida de datos de carácter personal se realizará única y exclusivamente a través de los formularios publicados en la web
+    y de los correos electrónicos que los usuarios puedan remitir a­­­­­­­­­­­­­­­­­ nombre de la empresa que serán incluidos en un fichero automatizado.</p>
+<p>Los ficheros titularidad de nombre de la empresa figuran inscritos en el Registro General de la Agencia Española de Protección de Datos, 
+    al que podrá acceder el usuario o visitante para comprobar la situación de aquellos.</p>
+<p><b>Veterinaria El Rey Can</b> conservará sus datos una vez finalizada la relación con el usuario para cumplir las obligaciones legales necesarias.
+    A su vez, procederá a la cancelación de los datos recogidos cuando dejen de ser necesarios para la finalidad para la que fueron recabados.</p>
+<h3>2. Seguridad de la información</h3>
+<p><b>Veterinaria El Rey Can</b> ha desarrollado todos los sistemas y medidas técnicas y organizativas a su alcance, previstas en la normativa de protección 
+    de datos de carácter personal para evitar la pérdida, mal uso, alteración, acceso no autorizado y sustracción de los datos de carácter personal facilitados por el usuario o visitante.</p>
+
