--- a/MVCVeterinaria/Views/Turno/Index.cshtml
+++ b/MVCVeterinaria/Views/Turno/Index.cshtml
@@ -9,7 +9,7 @@
 <form asp-controller="Turno" asp-action="Index">
     <p>
        Nombre: <input type="text" name="SearchString" />
-        <input type="submit" value="Filter" />
+        <input type="submit" value="Buscar" />
     </p>
 </form>
 
