--- a/MVCVeterinaria/Views/Home/Index.cshtml
+++ b/MVCVeterinaria/Views/Home/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<header>
+    <img src="https://thumbs.dreamstime.com/b/banner-three-hide-funny-surprised-dogs-puppies-isolated-yellow-background-207819279.jpg" style="width: 100%; height:25%"/>
+</header>
 <div class="text-center">
     <h1 class="display-4">Veterinaria El Rey Can</h1>
     <p>Bienvenido al sistema de manipulación de turnos y medicos</p>
 </div>
 
-@Html.ActionLink("Ir a Turnos De Hoy", "TurnosDeHoy", "Turno")
+@Html.ActionLink("Ver Solo Turnos De Hoy", "TurnosDeHoy", "Turno")
