--- a/MVCVeterinaria/Views/Medico/Create.cshtml
+++ b/MVCVeterinaria/Views/Medico/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVCVeterinaria.Models.Medico
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
 }
 
 <h1>Crear</h1>
@@ -28,7 +28,7 @@
                 <span asp-validation-for="NroMatricula" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
