--- a/MVCVeterinaria/Views/Medico/Index.cshtml
+++ b/MVCVeterinaria/Views/Medico/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<MVCVeterinaria.Models.Medico>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Medicos";
 }
 
-<h1>Index</h1>
+<h1>Medicos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Nuevo</a>
 </p>
 <table class="table">
     <thead>
